# grok_sulfide

./: .gitignore  README.md  SHARE_BEFORE_SEND.txt  browser.py  cli_runtime.py  config.example.json  config_runtime.py  cpa_export.py  failure_classify.py  grok2api_pool.py  grok_register_gui.py  grok_register_ttk.py  healthcheck.py  hotmail_provider.py  http_util.py  logging_setup.py  mail_credentials.example.txt  nsfw_settings.py  protocol_register.py  proxy_bridge.py  pyproject.toml  register_cli.py  requirements.txt  start_webui.cmd  start_webui.ps1  store.py  tab_pool.py  webui_process.py  webui_server.py  webui_service.py  webui_service_common.py
cpa_xai/: __init__.py  browser_confirm.py  browser_flow.py  browser_lifecycle.py  browser_ui.py  facade.py
docs/: REFACTORING_PLAN.md  REFACTOR_PROGRESS.md  REGISTER_PLAYBOOK.md  ruff_baseline.txt
protocol_engine/: BOUNDARY.md
providers/: __init__.py  base.py  cloudflare.py  cloudmail.py  common.py  duckmail.py  hotmail.py  runtime.py  tempmail.py  yyds.py
registration/: __init__.py  email_step.py  otp_step.py  page_state.py  profile_step.py  runtime.py  sso_step.py
scripts/: backfill_cpa_xai_from_accounts.py  import_outlook_csv_pool.py  migrate_ledger_to_sqlite.py  purge_credentials.py
tests/: test_browser_session.py  test_characterization.py  test_config_runtime.py  test_failure_classify.py  test_healthcheck.py  test_logging_setup.py  test_protocol_boundary.py  test_providers.py  test_store.py  test_store_sqlite.py  test_tempmail_provider.py  test_webui_auth.py  test_webui_static.py
webui/: app.js  index.html  (+1 more)
(+7 files in other folders)
